# Empathetic-Communication

./: BEDROCK_GUARDRAILS.md  PACKAGE_MANAGEMENT.md  README.md  amplify.yml  pyproject.toml
cdk/: OpenAPI_Swagger_Definition.yaml  package-lock.json  package.json
cdk/data_ingestion/src/: main.py
cdk/lambda/adminFunction/: adminFunction.js
cdk/lambda/db_setup/: initializer.py  migrations.py
cdk/lambda/deleteLastMessage/: deleteLastMessage.py
cdk/lambda/lib/: instructorFunction.js  studentFunction.js
cdk/lambda/spoken_llm/: Dockerfile  lambda_handler.py  main.py  requirements.txt  socket_client.py
cdk/lib/: amplify-stack.ts  api-gateway-stack.ts  api-service-stack.ts  database-stack.ts  dbFlow-stack.ts  ecs-socket-stack.ts  vpc-stack.ts
cdk/socket-server/: Dockerfile  debug_audio.py  lambda_handler.py  langchain_chat_history.py  main.py  nova_boto3.py  nova_boto3_fixed.py  nova_sonic.py  package.json  requirements.txt  server.js  voice_db_manager.py
cdk/text_generation/: pyproject.toml
cdk/text_generation/src/: main.py
docs/: BEDROCK_GUARDRAILS.md  CROSS_REGION_DEPLOYMENT.md  PYTHON_PACKAGE_MANAGEMENT.md  databaseModificationGuide.md  deploymentGuide.md  empathy-coach-deepdive.md  userGuide.md  voice_selection.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Theme.jsx
frontend/src/components/: AIMessage.jsx  AdminHeader.jsx  EmpathyCoachSummary.jsx  InstructorHeader.jsx  NovaVisualizer.jsx  Session.jsx  StudentHeader.jsx  StudentMessage.jsx  VoiceConversation.jsx
frontend/src/pages/: Login.jsx  (+2 more)
(+41 files in other folders)
