[tool.poetry]
name = "empathetic-communication"
version = "0.1.0"
description = "Empathetic Communication Training System"
readme = "README.md"
packages = [
    {include = "cdk"},
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
botocore = "^1.34.0"
langchain = "*"
langchain-aws = "*"
langchain-core = "*"
langchain-community = "*"
langchain-postgres = "*"
langchain-experimental = "*"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
pillow = "^10.0.0"
pymupdf = "*"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"